<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_white"
    >
    <ImageView
        android:id="@+id/iv_canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/iv_desc"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:background="@drawable/score_bg"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_level"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textAllCaps="true"
                />
            <TextView
                android:id="@+id/tv_level"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/start_level"
                android:textAlignment="center"
                android:textSize="20sp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_score"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/start_score"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        <ImageButton
            android:id="@+id/btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_pause"
            android:src="@drawable/ic_baseline_pause_24"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            />
    </LinearLayout>
</RelativeLayout>