<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_red"
    android:orientation="vertical"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_start"
            android:textColor="@color/bg_white"
            android:textSize="70sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_level_string"
                android:textColor="@color/bg_white"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_level_value"
                android:textColor="@color/bg_white"
                android:textSize="30sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_score_string"
                android:textColor="@color/bg_white"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_score_value"
                android:textColor="@color/bg_white"
                android:textSize="30sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/btn_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_score"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/bg_white"
            android:textSize="20sp"
            android:paddingVertical="20dp"
            android:paddingHorizontal="50dp"
            />
        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_restart"
            android:backgroundTint="@color/bg_white"
            android:textColor="@color/bg_red"
            android:textSize="20sp"
            android:paddingVertical="20dp"
            android:paddingHorizontal="50dp"
            />
    </LinearLayout>
</RelativeLayout>