<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pause"
        android:textColor="@color/bg_white"
        android:textSize="70sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textColor="@color/bg_white"
        android:textSize="150sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        />
    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:backgroundTint="@color/bg_white"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        />
</RelativeLayout>